@@ -2,22 +2,16 @@ package no.nav.organisasjonforvalter.consumer;
 
 import lombok.extern.slf4j.Slf4j;
 import no.nav.organisasjonforvalter.config.Consumers;
-import no.nav.testnav.libs.commands.generernavnservice.v1.GenererNavnCommand;
+import no.nav.organisasjonforvalter.consumer.command.GenererNavnCommand;
 import no.nav.testnav.libs.securitycore.domain.ServerProperties;
 import no.nav.testnav.libs.servletsecurity.exchange.TokenExchange;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.reactive.function.client.WebClient;
-import org.springframework.web.reactive.function.client.WebClientResponseException;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import static java.lang.String.format;
-import static java.lang.System.currentTimeMillis;
-import static java.util.Objects.requireNonNull;
 
 @Slf4j
 @Service
@@ -29,10 +23,11 @@ public class GenererNavnServiceConsumer {
 
     public GenererNavnServiceConsumer(
             Consumers consumers,
-            TokenExchange tokenExchange) {
+            TokenExchange tokenExchange,
+            WebClient.Builder webClientBuilder) {
 
         serverProperties = consumers.getGenererNavnService();
-        this.webClient = WebClient.builder()
+        this.webClient = webClientBuilder
                 .baseUrl(serverProperties.getUrl())
                 .build();
         this.tokenExchange = tokenExchange;
@@ -40,30 +35,16 @@ public class GenererNavnServiceConsumer {
 
     public List<String> getOrgName(Integer antall) {
 
-        long startTime = currentTimeMillis();
-        try {
-            var accessToken = tokenExchange.exchange(serverProperties);
-            var navn = new GenererNavnCommand(webClient, accessToken.block().getTokenValue(), antall).call();
-
-            log.info("Generer-navn-service svarte etter {} ms", currentTimeMillis() - startTime);
-            return Arrays.stream(navn)
-                    .map(value -> format("%s %s", value.getAdjektiv(), value.getSubstantiv()))
-                    .collect(Collectors.toList());
-
-        } catch (WebClientResponseException e) {
-            log.error(e.getMessage(), e);
-            throw new HttpClientErrorException(e.getStatusCode(), requireNonNull(e.getMessage()));
-
-        } catch (RuntimeException e) {
-
-            log.error(e.getMessage(), e);
-            throw new HttpClientErrorException(HttpStatus.GATEWAY_TIMEOUT, e.getMessage());
-        }
+        return tokenExchange.exchange(serverProperties)
+                .flatMapMany(token -> new GenererNavnCommand(webClient, antall, token.getTokenValue()).call())
+                .map(value -> format("%s %s", value.getAdjektiv(), value.getSubstantiv()))
+                .collect(Collectors.toList())
+                .block();
     }
 
     public String getOrgName() {
 
         List<String> orgName = getOrgName(1);
-        return orgName.isEmpty() ? null : orgName.get(0);
+        return orgName.isEmpty() ? null : orgName.getFirst();
     }
 }
